--- a/app/globals.css
+++ b/app/globals.css
@@ -120,3 +120,28 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities{
+
+  .gradient{
+    @apply bg-gradient-to-br from-blue-700 to-teal-700;
+  }
+
+  .gradient-title {
+    @apply bg-gradient-to-br from-blue-700 to-teal-700 font-extrabold tracking-tight pr-2 pb-2 text-transparent bg-clip-text;
+  }  
+}
+
+.hero-image-wrapper{
+  perspective: 500px;
+}
+
+.hero-image{
+   transform: rotateX(15deg) scale(1);
+   transition: transform 0.5s ease-out; 
+   will-change: transform;
+}
+
+.hero-image.scrolled{
+  transform: rotateX(0deg) scale(1) translateY(40px);
+}
